--- a/src/Body.css
+++ b/src/Body.css
@@ -53,10 +53,151 @@
 
 .mainImageButton {
   position: absolute;
+  bottom: 45%; /* 하단에서 5%의 위치에 배치 */
+  left: 50%; /* 좌우 중앙 정렬 */
+  transform: translateX(-50%); /* X축 중심 정렬 */
   transition: background-color 0.2s, opacity 2s ease-in-out;
-  opacity: 0; /* 초기 투명도 설정 */
+  opacity: 1; /* 버튼이 항상 보이게 변경 */
+  padding: 10px 20px; /* 패딩 조정 */
+  background-color: #218838; /* 기본 배경색 설정 */
+  color: white; /* 글자색 */
+  border: none; /* 테두리 제거 */
+  cursor: pointer; /* 마우스 오버 시 커서 변경 */
+  min-width: 150px; /* 버튼 최소 너비 설정 */
+  height: 50px; /* 버튼 높이 설정 */
+  font-size: calc(0.6vw + 20px); /* 글자 크기 반응형으로 설정, 최소 10px */
 }
+
+@media (max-width: 768px) {
+  .mainImageButton {
+    width: 40%; /* 화면이 작을 경우 너비 60% */
+    font-size: 14px; /* 작은 화면에서의 글자 크기 */
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .mainImageButton {
+    width: 40%; /* 중간 크기의 화면에서 너비 40% */
+    font-size: 16px; /* 중간 화면에서의 글자 크기 */
+  }
+}
+
+@media (min-width: 1025px) {
+  .mainImageButton {
+    width: 30%; /* 큰 화면에서 너비 30% */
+    font-size: 18px; /* 큰 화면에서의 글자 크기 */
+  }
+}
+
+
 
 .mainImageButton:hover {
   background-color: #218838;
+}
+
+
+.interactiveImage-a {
+  width: 8%;
+  height: auto;
+  position: absolute;
+  left: 3%;
+  top: calc(50% - 4%);
+  transition: transform 0.3s ease;
+  transform-origin: center center;
+}
+
+.interactiveImage-b {
+  width: 8%;
+  height: auto;
+  position: absolute;
+  left: 20%; /* 원하는 위치로 수정 */
+  top: 20%; /* 원하는 위치로 수정 */
+  transition: transform 0.3s ease;
+  transform-origin: center center;
+}
+
+.interactiveImage-c {
+  width: 8%;
+  height: auto;
+  position: absolute;
+  left: 50%; /* 원하는 위치로 수정 */
+  top: 60%; /* 원하는 위치로 수정 */
+  transition: transform 0.3s ease;
+  transform-origin: center center;
+}
+
+.interactiveImage-d {
+  width: 8%;
+  height: auto;
+  position: absolute;
+  left: 70%; /* 원하는 위치로 수정 */
+  top: 20%; /* 원하는 위치로 수정 */
+  transition: transform 0.3s ease;
+  transform-origin: center center;
+}
+
+
+
+
+@media (max-width: 768px) {
+  .interactiveImage {
+    width: 6%; /* 태블릿 크기에서의 이미지 너비 */
+  }
+}
+
+@media (max-width: 480px) {
+  .interactiveImage {
+    width: 6%; /* 모바일 크기에서의 이미지 너비 */
+  }
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 반투명 배경 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* 다른 요소 위에 표시 */
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.modalImage {
+  width: 90%; /* 이미지 크기 조정 */
+  max-height: 80vh; /* 화면에 맞춰 높이 조정 */
+}
+
+.close {
+  float: right;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.prevSlide, .nextSlide {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 24px;
+  z-index: 1001;
+}
+
+.prevSlide {
+  left: 0;
+}
+
+.nextSlide {
+  right: 0;
 }
