--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -64,3 +64,34 @@
 .form button:hover {
   background-color: #218838;
 }
+
+.my-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f0f0;
+  margin: 0;
+}
+
+input[type="file"] {
+  display: block;
+  margin: 20px auto;
+}
+
+.thumbnail-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  padding: 10px;
+  position: absolute;
+  top: 5%
+}
+
+.thumbnail {
+  background-color: #fff;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  text-align: center;
+}
